[package]
name = "fwdansi"
version = "1.0.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Forwards a byte string with ANSI escape code to a termcolor terminal"
repository = "https://github.com/kennytm/fwdansi"
keywords = ["ansi", "windows", "console", "terminal", "color"]
categories = ["command-line-interface"]
license = "MIT"

[badges]
travis-ci = { repository = "kennyt/fwdansi" }
appveyor = { repository = "kennyt/fwdansi" }
maintenance = { status = "passively-maintained" }

[dependencies]
termcolor = "1"
memchr = "2"

[dev-dependencies]
proptest = "0.8"
